# INAV-X-Plane-HITL

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_docker_image.bat  run-docker-compiler-for-linux.bat
.github/workflows/: build_release.yml  ci.yml
doc/: development.md  setup.md
doc/aerolite/: aerolite.md
doc/nkfpvsufrwing/: nkfpvsurfwing.md
release/: NightlyBuild.md
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/: NK_FPVSW.acf  NK_FPVSW.acf~  NK_FPVSW_prefs.txt  readme.txt
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/fmod/: GUIDs.txt  Master Bank.bank  NK_FPVSW.snd
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/INAV-X-Plane-HITL/64/: lin.xpl  mac.xpl  win.ilk  win.xpl
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/xlua/: init.lua
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/xlua/64/: lin.xpl  mac.xpl  win.xpl
release/Aircraft/Extra Aircraft/NK_FPVSurfwing/plugins/xlua/scripts/sound.refs/: sound.refs.lua
release/Aircraft/Laminar Research/Aerolite 103/plugins/INAV-X-Plane-HITL/64/: lin.xpl  win.xpl
src/: .editorconfig  INAV-X-Plane-HITL-Plugin.sln  INAV-X-Plane-HITL-Plugin.vcxproj  INAV-X-Plane-HITL-Plugin.vcxproj.filters  Makefile  build.sh  build_lin64.sh  config.h  exports.sym_mac  fontanalog.cpp  fontanalog.h  fontbase.cpp  fontbase.h  fonthdzero.cpp  fonthdzero.h  fontwalksnail.cpp  fontwalksnail.h  fontwtfos.cpp  fontwtfos.h  graph.cpp  graph.h  ipinputwidget.cpp  ipinputwidget.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  msp.cpp  msp.h  osd.cpp  osd.h  osdRenderer.cpp  osdRenderer.h  osd_analog.cpp  osd_analog.h  osd_base.cpp  osd_base.h  osd_hd.cpp  osd_hd.h  (+20 more)
src/mINI/: ini.h
src/stb/: stb_image.h
